# minivim

./: .gitignore  CMakeLists.txt  README.md  basic.cpp  command_mode.cpp  minivim.cpp  normal_mode.cpp  operations.cpp  tmp.cpp
include/: minivim.h
src/: basic.cpp  command_mode.cpp  insert_mode.cpp  normal_mode.cpp  operations.cpp
